--- a/IOCLibrary/App.config
+++ b/IOCLibrary/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="DBLibrary" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=Library;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="LibraryModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=IOCLibrary.DataBase.LibraryModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
