--- a/OOPFFinalProject/OOPFFinalProject.csproj
+++ b/OOPFFinalProject/OOPFFinalProject.csproj
@@ -53,7 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollectionManager.cs" />
-    <Compile Include="Models\ReadableItem.cs" />
+    <Compile Include="Interfaces\ILibraryItem.cs" />
+    <Compile Include="Models\ILibraryItem.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\Journal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
