--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -43,16 +43,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\IEditable.cs" />
-    <Compile Include="API\IFilter.cs" />
-    <Compile Include="API\IJournal.cs" />
-    <Compile Include="API\INotifyBook.cs" />
+    <Compile Include="IServices\ICollectionManager.cs" />
+    <Compile Include="IServices\IEditable.cs" />
+    <Compile Include="IServices\IFilter.cs" />
+    <Compile Include="IServices\IJournal.cs" />
+    <Compile Include="IServices\INotifyBook.cs" />
     <Compile Include="Services\DataFilterService.cs" />
     <Compile Include="Services\BookService.cs" />
-    <Compile Include="API\IBook.cs" />
+    <Compile Include="IServices\IBook.cs" />
     <Compile Include="Services\EditService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="API\INotifyJournal.cs" />
+    <Compile Include="IServices\INotifyJournal.cs" />
     <Compile Include="Services\JournalService.cs" />
   </ItemGroup>
   <ItemGroup>
